# shipyard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  prompt.md
.github/workflows/: ci.yml
examples/: icon_preview.rs  real_install.rs
src/: app.rs  lib.rs  main.rs  paths.rs
src/config/: mod.rs  schema.rs
src/games/: ghostship.rs  mod.rs  soh.rs  spaghettikart.rs  starship.rs  twoship.rs
src/github/: mod.rs
src/launcher/: mod.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/roms/: cached_assets.rs  library.rs  mod.rs  wiring.rs
src/ui/: library_view.rs  mod.rs  modal.rs  roms_view.rs  settings_view.rs
