[package]
name = "shipyard"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
directories = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tempfile = "3"
sha1 = "0.10"
rfd = "0.15"
resvg = "0.43"
tiny-skia = "0.11"
usvg = "0.43"
iced_fonts = { version = "0.2", features = ["bootstrap"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
